--- a/blog-template.html
+++ b/blog-template.html
@@ -10,7 +10,7 @@
       <img src=# />
     </figure>
     <header>
-      <h1><p>Lorem ipsum</p><h1></h1>
+      <h1><p>Lorem ipsum</p></h1>
       <a href=#><img src=# /></a>    <!--!Social Media link 1 -->
       <a href=#><img src=# /></a>    <!--!Social Media link 2 -->
     </header>
