--- a/Site-index.html
+++ b/Site-index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <figure>
-      <a href=#><img src=# /></a> <!-- profile picture and link to return home -->
+      <a href=#><img src=# alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
     </figure>
     <header>
-      <h1><p>John Craigie</p></h1>   <!-- or witty title -->
+      <p><h1>John Craigie</h1></p>   <!-- or witty title -->
       <!-- <h2><p>The personal page of John Craigie</p></h2> --> <!-- if witty title is used -->
-      <a href=#><img src=# /></a>    <!--!Social Media link 1 -->
-      <a href=#><img src=# /></a>    <!--!Social Media link 2 -->
-      <a href="https://github.com/jcraigie?tab=repositories"><img src="/imgs/Github.png" /></a>
+      <a href=#><img src=# alt=""/></a>    <!--!Social Media link 1 -->
+      <a href=#><img src=# alt=""/></a>    <!--!Social Media link 2 -->
+      <a href="https://github.com/jcraigie?tab=repositories"><img src="/imgs/Github.png" alt=""/></a>
     </header>
     <nav>
       <a href=#>About me</a><br />
