--- a/blog-template.html
+++ b/blog-template.html
@@ -10,17 +10,17 @@
       <img src=# />
     </figure>
     <header>
-      <h1><p>Lorem ipsum</p></h1>
-      <a href=#><img src=# /></a>    <!--!Social Media link 1 -->
-      <a href=#><img src=# /></a>    <!--!Social Media link 2 -->
+      <p><h1>Lorem ipsum</h1></p>
+      <a href=#><img src=# /></a>    <--!Social Media link 1 -->
+      <a href=#><img src=# /></a>    <--!Social Media link 2 -->
     </header>
     <section>
       <p>Lorem ipsum</p>
     </section>
     <nav>
-      <a href=#>Navigation link 1</a><br />
-      <a href=#>Navigation link 2</a><br />
-      <a href=#>Navigation link 3</a><br />
+      <a href=#>Navigation link 1</a>
+      <a href=#>Navigation link 2</a>
+      <a href=#>Navigation link 3</a>
     </nav>
     <footer>
       <p>Lorem Ipsum</p>
@@ -28,35 +28,5 @@
       <a href="mailto:emailaddress">AuthorName</a>
     </footer>
   </body>
-
-<!--
-How was it to wireframe and create an HTML page with a pair?
-It was a very positive experience. We were both able to talk through our ideas andprogress our concepts very easily and then create the html very easily.
-
-Did you find wireframing to be helpful to your development process?
-In this case it was a minor help due to us collaborating but if one working solo on such a simple page I'm not sure how much help it would be. 
-I can definitely see how wireframing would be helpful, if nor essential on a more involed project.
-
-What did you and your pair decide made a good wireframe? 
-It seemed that a good wireframe is one that gives the users a solid understanding of how the elements are to  be displayed and more importantly 
-their grouping in order to determine the correct tag i.e. div vs. section vs. nav etc.
-
-What new semantic elements did you learn about (if any)?
-The figure (for out profile pic section) and line break(to format the navigation liks appropriately) were two elements I learned about during the excercise.
--->
-
-<img src="/imgs/wireframe-blogs.png"/>
-
+  
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
