--- a/blog-template.html
+++ b/blog-template.html
@@ -29,4 +29,21 @@
     </footer>
   </body>
   
+   <!--
+How was it to wireframe and create an HTML page with a pair?
+It was a very positive experience. We were both able to talk through our ideas andprogress our concepts very easily and then create the html very easily.
+ 
+Did you find wireframing to be helpful to your development process?		  Did you find wireframing to be helpful to your development process?
+In this case it was a minor help due to us collaborating but if one working solo on such a simple page I'm not sure how much help it would be. 
+I can definitely see how wireframing would be helpful, if nor essential on a more involed project.
+
+What did you and your pair decide made a good wireframe? 
+It seemed that a good wireframe is one that gives the users a solid understanding of how the elements are to  be displayed and more importantly 
+their grouping in order to determine the correct tag i.e. div vs. section vs. nav etc.
+
+What new semantic elements did you learn about (if any)?
+The figure (for our profile pic section) and line break(to format the navigation liks appropriately) were two elements I learned about during the excercise.
+-->		  
+  		  
+<img src="/img/wireframe-blogs.png" />
 </html>
