--- a/blog-template.html
+++ b/blog-template.html
@@ -45,5 +45,5 @@ What new semantic elements did you learn about (if any)?
 The figure (for our profile pic section) and line break(to format the navigation liks appropriately) were two elements I learned about during the excercise.
 -->		  
   		  
-<img src="/img/wireframe-blogs.png" />
+<img src="/imgs/wireframe-blogs.png" />
 </html>
