--- a/blog-template.html
+++ b/blog-template.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/blog.css"/>
     <title>
-      Blog Post
+      John Craigie
     </title>
   </head>
   <body>
-    <figure>
-      <img src=# />
+    <figure id="profile">
+      <a href=#><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
     </figure>
     <header>
-      <p><h1>Lorem ipsum</h1></p>
-      <a href=#><img src=# /></a>    <--!Social Media link 1 -->
-      <a href=#><img src=# /></a>    <--!Social Media link 2 -->
+      <h1>John Craigie</h1>   <!-- or witty title -->
+      <!-- <h2><p>The personal page of John Craigie</p></h2> --> <!-- if witty title is used -->
+      <section id="header-links">
+      <figure id="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/twitter.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
+      <figure id="header-link-imgs"><a href=#><img src=# alt="imgs/twitter.png"/></a></figure>    <!--!Social Media link 2 placeholder -->
+      <figure id="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github.png" alt="Github"/></a></figure>
+      </section>
     </header>
-    <section>
-      <p>Lorem ipsum</p>
-    </section>
     <nav>
-      <a href=#>Navigation link 1</a>
-      <a href=#>Navigation link 2</a>
-      <a href=#>Navigation link 3</a>
+      <section><a href=#>About me</a><br /></section>
+      <section><a href=#>Projects</a><br /></section>
+      <section><a href="/Blog-template.html">Blog</a><br /></section>
+      <section><a href=#>LinkedIn</a><br /></section>
+      <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
+      <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
+    <div id="blog">
+      <h2>Title</h2>
+      <h3>date</h3>
+      <p>Lorem Ipsum</p>
+      <p>Lorem Ipsum</p>
+    </div>
     <footer>
-      <p>Lorem Ipsum</p>
-      <p>Lorem Ipsum</p>
-      <a href="mailto:emailaddress">AuthorName</a>
+      <section id="footer-1"><p>Lorem Ipsum</p></section> <!-- Legal info or similar -->
+      <section id="footer-2"><p>Lorem Ipsum</p></section> <!-- Copyright info or similar -->
+      <section id="footer-3"><p>All content hand crafted by <a href="mailto:jcraigie@cox.net">John Craigie</a></p></section>
     </footer>
   </body>
+    <!--ran up to the time limit -->
+
   
-   <!--
+<!--
 How was it to wireframe and create an HTML page with a pair?
 It was a very positive experience. We were both able to talk through our ideas andprogress our concepts very easily and then create the html very easily.
  
@@ -43,7 +57,7 @@ their grouping in order to determine the correct tag i.e. div vs. section vs. na
 
 What new semantic elements did you learn about (if any)?
 The figure (for our profile pic section) and line break(to format the navigation liks appropriately) were two elements I learned about during the excercise.
--->		  
+
   		  
-<img src="/imgs/wireframe-blogs.png" />
+<img src="/imgs/wireframe-blogs.png" />-->
 </html>
