--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
     <title>
       John Craigie
     </title>
   </head>
   <body>
-    <figure>
-      <a href=#><img src=# alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
+    <figure id="profile">
+      <a href=#><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
     </figure>
     <header>
-      <p><h1>John Craigie</h1></p>   <!-- or witty title -->
+      <h1>John Craigie</h1>   <!-- or witty title -->
       <!-- <h2><p>The personal page of John Craigie</p></h2> --> <!-- if witty title is used -->
-      <a href=#><img src=# alt=""/></a>    <!--!Social Media link 1 -->
-      <a href=#><img src=# alt=""/></a>    <!--!Social Media link 2 -->
-      <a href="https://github.com/jcraigie?tab=repositories"><img src="/imgs/Github.png" alt=""/></a>
+      <section id="header-links">
+      <figure id="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/twitter.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
+      <figure id="header-link-imgs"><a href=#><img src=# alt="imgs/twitter.png"/></a></figure>    <!--!Social Media link 2 placeholder -->
+      <figure id="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github.png" alt="Github"/></a></figure>
+      </section>
     </header>
     <nav>
-      <a href=#>About me</a><br />
-      <a href=#>Projects</a><br />
-      <a href="/Blog-index.html">Blog</a><br />
-      <a href=#>LinkedIn</a><br />
-      <a href=#>Resume</a><br /> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
-      <a href="mailto:jcraigie@cox.net">Contact me</a>
+      <section><a href=#>About me</a><br /></section>
+      <section><a href=#>Projects</a><br /></section>
+      <section><a href="/Blog-template.html">Blog</a><br /></section>
+      <section><a href=#>LinkedIn</a><br /></section>
+      <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
+      <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
-      <p>Lorem Ipsum</p> <!-- Legal info or similar -->
-      <p>Lorem Ipsum</p> <!-- Copyright info or similar -->
-      <p>All content hand crafted by <a href="mailto:jcraigie@cox.net">John Craigie</a></p>
+      <section id="footer-1"><p>Lorem Ipsum</p></section> <!-- Legal info or similar -->
+      <section id="footer-2"><p>Lorem Ipsum</p></section> <!-- Copyright info or similar -->
+      <section id="footer-3"><p>All content hand crafted by <a href="mailto:jcraigie@cox.net">John Craigie</a></p></section>
     </footer>
   </body>
-  
+  <!--ran up to the time limit -->
 </html>
