--- a/Blog-index.html
+++ b/Blog-index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="/../stylesheets/default.css"/>
+    <link type="text/css" rel="stylesheet" href="../stylesheets/blog.css"/>
     <title>
       John Craigie
     </title>
@@ -24,11 +26,12 @@
       <a href=#>Resume</a><br /> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
       <a href="mailto:jcraigie@cox.net">Contact me</a>
     </nav>
-    <section>
+    <section id="blog">
       <header>
       <h2>Blogs</h2><br />  
       </header>
       <a href="/blog/git.html">Git</a><br />
+      <a href="/blog/css-concepts.html.html">Css-concepts</a><br />
     </section>
     <footer>
       <p>Lorem Ipsum</p> <!-- Legal info or similar -->
