--- a/Blog-index.html
+++ b/Blog-index.html
@@ -34,7 +34,7 @@
       <h2>Blogs</h2><br />  
       </header>
       <a href="/blog/git.html">Git</a><br />
-      <a href="/blog/css-concepts.html.">Css-concepts</a><br />
+      <a href="/blog/css-concepts.html">Css-concepts</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
