--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <figure id="profile">
-      <a href=#><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
+      <a href="index.html"><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
       <!-- used a handy picture as a placeholder -->
     </figure>
     <header>
       <h1>John Craigie</h1>   <!-- or witty title -->
       <!-- <h2><p>The personal page of John Craigie</p></h2> --> <!-- if witty title is used -->
       <section id="header-links">
-      <figure id="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/twitter.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
-      <figure id="header-link-imgs"><a href=#><img src=# alt="imgs/twitter.png"/></a></figure>    <!--!Social Media link 2 placeholder -->
-      <figure id="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github.png" alt="Github"/></a></figure>
+      <figure class="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/twitter.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
+      <figure class="header-link-imgs"><a href=#><img src=# alt="imgs/twitter.png"/></a></figure>    <!--!Social Media link 2 placeholder -->
+      <figure class="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github.png" alt="Github"/></a></figure>
       </section>
     </header>
     <nav>
