--- a/Blog-index.html
+++ b/Blog-index.html
@@ -35,6 +35,7 @@
       </header>
       <a href="/blog/git.html">Git</a><br />
       <a href="/blog/css-concepts.html">Css-concepts</a><br />
+      <a href="/blog/arrays-hashes.html">Arrays and Hashes</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
