--- a/Blog-index.html
+++ b/Blog-index.html
@@ -36,7 +36,7 @@
       <a href="/blog/git.html">Git</a><br />
       <a href="/blog/css-concepts.html">Css-concepts</a><br />
       <a href="/blog/arrays-hashes.html">Arrays and Hashes</a><br />
-      <a href="/blog/enumerable-methods.html">Arrays and Hashes</a><br />
+      <a href="/blog/enumerable-methods.html">Enumerable: Map</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
