--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/blog.css"/>
     <title>
       John Craigie
     </title>
@@ -20,14 +21,18 @@
       </section>
     </header>
     <nav>
-      <section><a href="about.html">About me</a><br /></section>
+      <section><a href="/about.html">About me</a><br /></section>
       <section><a href=#>Projects</a><br /></section>
       <section><a href="/Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
       <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
       <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
-    <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
+    <div id="blog">
+      <h2>About me</h2>
+      <p>My name is John Craigie I am a San Diego native  who yearns to run away from the constant sunshine of this “wonderfully sunny beach city” and run to somewhere rainy and dreary. I spent two years traveling the west coast and helping communities in Americorps NCCC and fell in love with the Pacific North West. Beautiful Country. 
+	I have spent too many years working in corporate security with a brief, deliciously enlightening, foray into culinary school and have now ended up at Dev Bootcamp in their inaugural cohort for San Diego. For fun in my free time I participate in medieval reenactment through the SCA. </p>
+      <p>Lorem Ipsum</p>
     <footer>
       <section id="footer-1"><p>Lorem Ipsum</p></section> <!-- Legal info or similar -->
       <section id="footer-2"><p>Lorem Ipsum</p></section> <!-- Copyright info or similar -->
