--- a/Blog-index.html
+++ b/Blog-index.html
@@ -21,14 +21,14 @@
       </section>
     </header>
     <nav>
-      <section><a href=#>About me</a><br /></section>
-      <section><a href=#>Projects</a><br /></section>
+      <section><a href="about.html">About me</a><br /></section>
+      <section><a href="projects/index.html">Projects</a><br /></section>
       <section><a href="/Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
       <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
       <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
-    <section id="blog">
+    <section id="content">
       <header>
       <h2>Blogs</h2><br />  
       </header>
@@ -37,6 +37,7 @@
       <a href="/blog/arrays-hashes.html">Arrays and Hashes</a><br />
       <a href="/blog/enumerable-methods.html">Enumerable: Map</a><br />
       <a href="/blog/ruby-classes.html">Classes</a><br />
+      <a href="/blog/javascript.html">Javascript</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
