--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <nav>
       <section><a href="about.html">About me</a><br /></section>
-      <section><a href=#>Projects</a><br /></section>
+      <section><a href="projects/index.html">Projects</a><br /></section>
       <section><a href="/Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
       <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
@@ -29,8 +29,8 @@
     </nav>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
-      <section id="footer-1"><p>Lorem Ipsum</p></section> <!-- Legal info or similar -->
-      <section id="footer-2"><p>Lorem Ipsum</p></section> <!-- Copyright info or similar -->
+      <section id="footer-1"><p>John Craigie - Copyright © 2016</p></section> <!-- Legal info or similar -->
+      <!-- <section id="footer-2"><p>Lorem Ipsum</p></section>  Copyright info or similar -->
       <section id="footer-3"><p>All content hand crafted by <a href="mailto:jcraigie@cox.net">John Craigie</a></p></section>
     </footer>
   </body>
