--- a/Blog-index.html
+++ b/Blog-index.html
@@ -32,12 +32,12 @@
       <header>
       <h2>Blogs</h2><br />  
       </header>
-      <a href="/blog/git.html">Git</a><br />
-      <a href="/blog/css-concepts.html">Css-concepts</a><br />
-      <a href="/blog/arrays-hashes.html">Arrays and Hashes</a><br />
-      <a href="/blog/enumerable-methods.html">Enumerable: Map</a><br />
-      <a href="/blog/ruby-classes.html">Classes</a><br />
-      <a href="/blog/javascript.html">Javascript</a><br />
+      <a href="blog/git.html">Git</a><br />
+      <a href="blog/css-concepts.html">Css-concepts</a><br />
+      <a href="blog/arrays-hashes.html">Arrays and Hashes</a><br />
+      <a href="blog/enumerable-methods.html">Enumerable: Map</a><br />
+      <a href="blog/ruby-classes.html">Classes</a><br />
+      <a href="blog/javascript.html">Javascript</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
