--- a/projects/cheat_sheet.html
+++ b/projects/cheat_sheet.html
@@ -9,13 +9,12 @@
   </head>
   <body>
     <figure id="profile">
-      <a href="../index.html"><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> 
-      <!-- used a handy picture as a placeholder -->
-    </figure>
+      <a href="../index.html"><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a>
+      </figure>
     <header>
       <h1>John Craigie</h1>   
       <section id="header-links">
-      <figure class="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="../imgs/Twitter circular logo 24px.png" alt="Twitter"/></a></figure>    
+      <figure class="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="../imgs/Twitter circular logo 24px.png" alt="Twitter"/></a></figure>   
       <figure class="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="../imgs/Github logo.png" alt="Github"/></a></figure>
       </section>
     </header>
@@ -24,14 +23,17 @@
       <section><a href="../projects/index.html">Projects</a><br /></section>
       <section><a href="/Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
-      <section><a href=#>Resume</a><br /></section> 
+      <section><a href=#>Resume</a><br /></section>
       <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
     <div id="content">
-      <h2>Title</h2>
-      <h3>date</h3>
-      <p>Lorem Ipsum</p>
-      <p>Lorem Ipsum</p>
+      <h2>Cheat Sheet</h2>
+      <h3>02/21/2016</h3>
+      <p><img src="../imgs/CS1.PNG" alt="SQL"><br /></p>
+      <p><img src="../imgs/CS2.PNG" alt="Javascript nestes iteration"><br /></p>
+      <p><img src="../imgs/CS3.PNG" alt="Ruby nested iteration"><br /></p>
+      <p><img src="../imgs/CS4.PNG" alt="Ruby Class attribute readers"><br /></p>
+      <!--<p>Lorem Ipsum</p>-->
     </div>
     <footer>
       <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> 
