--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
       <header>
       <h2>Projects</h2><br />  
       </header>
-      <a href="#">Sample</a><br />
+      <a href="cheat_sheet.html">Cheatsheet</a><br />
       <br />
       <a href="#">Sample</a><br />
       <br />
