--- a/projects/cheat_sheet.html
+++ b/projects/cheat_sheet.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <figure id="profile">
-      <a href="../index.html"><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a>
+      <a href="../index.html"><img src="../imgs/Wireframe-index.png" alt="Profile picture and home button."/></a>
       </figure>
     <header>
       <h1>John Craigie</h1>   
@@ -20,8 +20,8 @@
     </header>
     <nav>
       <section><a href="../about.html">About me</a><br /></section>
-      <section><a href="../projects/index.html">Projects</a><br /></section>
-      <section><a href="/Blog-index.html">Blog</a><br /></section>
+      <section><a href="/index.html">Projects</a><br /></section>
+      <section><a href="../Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
       <section><a href=#>Resume</a><br /></section>
       <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
