--- a/projects/cheat_sheet.html
+++ b/projects/cheat_sheet.html
@@ -29,10 +29,10 @@
     <div id="content">
       <h2>Cheat Sheet</h2>
       <h3>02/21/2016</h3>
-      <p><img src="../imgs/CS1.PNG" alt="SQL"><br /></p>
-      <p><img src="../imgs/CS2.PNG" alt="Javascript nestes iteration"><br /></p>
-      <p><img src="../imgs/CS3.PNG" alt="Ruby nested iteration"><br /></p>
-      <p><img src="../imgs/CS4.PNG" alt="Ruby Class attribute readers"><br /></p>
+      <img src="../imgs/CS1.png" alt="SQL"><br />
+      <img src="../imgs/CS2.png" alt="Javascript nestes iteration"><br /><
+      <img src="../imgs/CS3.png" alt="Ruby nested iteration"><br />
+      <img src="../imgs/CS4.png" alt="Ruby Class attribute readers"><br />
       <!--<p>Lorem Ipsum</p>-->
     </div>
     <footer>
