--- a/projects/cheat_sheet.html
+++ b/projects/cheat_sheet.html
@@ -30,7 +30,7 @@
       <h2>Cheat Sheet</h2>
       <h3>02/21/2016</h3>
       <img src="../imgs/CS1.png" alt="SQL"><br />
-      <img src="../imgs/CS2.png" alt="Javascript nestes iteration"><br /><
+      <img src="../imgs/CS2.png" alt="Javascript nestes iteration"><br />
       <img src="../imgs/CS3.png" alt="Ruby nested iteration"><br />
       <img src="../imgs/CS4.png" alt="Ruby Class attribute readers"><br />
       <!--<p>Lorem Ipsum</p>-->
