--- a/Blog-index.html
+++ b/Blog-index.html
@@ -38,6 +38,7 @@
       <a href="blog/enumerable-methods.html">Enumerable: Map</a><br />
       <a href="blog/ruby-classes.html">Classes</a><br />
       <a href="blog/javascript.html">Javascript</a><br />
+      <a href="blog/tech.html">Rails</a><br />
     </section>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
