--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
     <title>
       John Craigie
     </title>
+    <link type="text/css" rel="stylesheet" href="stylesheets/default.css"/>
   </head>
-  <body>
-    <figure id="profile">
+  <body class="grad">
+    <figure class="profile">
       <a href="index.html"><img src="imgs/Wireframe-index.png" alt="Profile picture and home button."/></a> <!-- profile picture and link to return home -->
       <!-- used a handy picture as a placeholder -->
     </figure>
     <header>
       <h1>John Craigie</h1>   <!-- or witty title -->
       <!-- <h2><p>The personal page of John Craigie</p></h2> --> <!-- if witty title is used -->
-      <section id="header-links">
-      <figure class="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/twitter.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
-      <figure class="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github.png" alt="Github"/></a></figure>
+      <section class="header-links">
+      <figure class="header-link-imgs"><a href="https://twitter.com/ArinB"><img src="imgs/Twitter circular logo 24px.png" alt="Twitter"/></a></figure>    <!--!Social Media link 1 -->
+      <figure class="header-link-imgs"><a href="https://github.com/jcraigie?tab=repositories"><img src="imgs/Github logo.png" alt="Github"/></a></figure>
       </section>
     </header>
     <nav>
       <section><a href="about.html">About me</a><br /></section>
       <section><a href="projects/index.html">Projects</a><br /></section>
-      <section><a href="/Blog-index.html">Blog</a><br /></section>
+      <section><a href="Blog-index.html">Blog</a><br /></section>
       <section><a href=#>LinkedIn</a><br /></section>
       <section><a href=#>Resume</a><br /></section> <!-- specifically mentioned in the wireframing assignment though may be redundant with the linkedin being present -->
       <section><a href="mailto:jcraigie@cox.net">Contact me</a></section>
     </nav>
     <!-- eventually a section would go here rotating through various blog posts and projects maybe -->
     <footer>
-      <section id="footer-1"><p>John Craigie - Copyright © 2016</p></section> <!-- Legal info or similar -->
+      <section class="footer-1"><p>&copy 2016 John Craigie</p></section> <!-- Legal info or similar -->
       <!-- <section id="footer-2"><p>Lorem Ipsum</p></section>  Copyright info or similar -->
-      <section id="footer-3"><p>All content hand crafted by <a href="mailto:jcraigie@cox.net">John Craigie</a></p></section>
+      <section>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></section>
     </footer>
   </body>
   <!--ran up to the time limit -->
